force-app/main/default/objects/Ward_IP__c/Ward_IP__c.object-meta.xml
<CustomObject>
    <label>Ward(IP)</label>
    <nameField>
        <displayFormat>WN - {00}</displayFormat>
        <label>Word No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wards (IP)</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>