force-app/main/default/objects/Ward_IP__c/fields/Remaining_Beds__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Beds__c</fullName>
    <formula>Total_Beds__c  -  Occupied_Beds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>