force-app/main/default/objects/Ward_IP__c/fields/Total_Beds__c.field-meta.xml
<CustomField>
    <fullName>Total_Beds__c</fullName>
    <label>Total Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>