force-app/main/default/objects/Ward_IP__c/fields/Ward_Name__c.field-meta.xml
<CustomField>
    <fullName>Ward_Name__c</fullName>
    <label>Ward Name</label>
    <length>22</length>
    <type>Text</type>
</CustomField>