force-app/main/default/objects/Ward_IP__c/fields/Ward_Type__c.field-meta.xml
<CustomField>
    <fullName>Ward_Type__c</fullName>
    <label>Ward Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAUSALITY</fullName>
            </value>
            <value>
                <fullName>GENERAL WARD</fullName>
            </value>
            <value>
                <fullName>SEMI-SPECIAL ROOM</fullName>
            </value>
            <value>
                <fullName>SPECIAL WARDS</fullName>
            </value>
            <value>
                <fullName>DELUXE ROOM</fullName>
            </value>
            <value>
                <fullName>CCU</fullName>
            </value>
            <value>
                <fullName>ICCU</fullName>
            </value>
            <value>
                <fullName>SICU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>